# AlgoGauge

./: .gitignore  AlgoGauge  AlgoGaugeDetails.hpp  CMakeLists.txt  DEV-README.md  PERF.md  README.md  contributions.md  main.cpp  makefile  perf_testing.c  todo.md  windows-toolchain.cmake
CLI_Parsing/: CLI_Parser.hpp  algorithm_caller.hpp  sorting_algorithm_caller.cpp  sorting_algorithm_caller.hpp
MultiLanguage/: Conductor.go  Conductor.mjs  MultiLanguage_DEV.md  rust_binary
MultiLanguage/Javascript/: AlgoGauge.mjs  Algogauge.js  Algogauge.mjs  AlgogaugeDetails.mjs  arrayCreation.js  arrayCreation.mjs  deno.json  package-lock.json  package.json  runAlgorithms.mjs  sorting-commander.js  sorting.js  sorting.mjs
MultiLanguage/Python/: README.md  pyproject.toml
MultiLanguage/Python/src/AlgoGaugePY/: __init__.py
MultiLanguage/Python/src/AlgoGauge_bradleypeterson/: __main__.py  array_creation.py  run_algorithms.py
MultiLanguage/Python/src/AlgogaugePY/: __init__.py  __main__.py  run_algorithms.py
MultiLanguage/Rust/: my_rust_program
Research/: main.c  perfTest  testing_perf.c++
algorithms/: RandomNum.hpp  arrays.cpp  hash_algs.cpp  linkedList.cpp  linked_list.cpp  sort_7algs.cpp
dependencies/: Perf.hpp  PerfEvent.hpp  cxxopts.hpp
docs/: DEV-README.md  MultiLanguage_DEV.md  PERF.md  Subprocess.md  contributions.md
perf/playground/: CMakeLists.txt  Dockerfile  main.cpp
src/: AlgoGaugeDetails.hpp  main.cpp
src/CLI_Parsing/: CLI_Parser.hpp  algorithm_caller.hpp
src/MultiLanguage/Javascript/: AlgoGaugeDetails.mjs  sorting.mjs
src/MultiLanguage/Python/: README.md  pyproject.toml
src/MultiLanguage/Python/src/AlgoGaugePY/: __init__.py  run_algorithms.py  sorting_methods.py
src/algorithms/: arrays.cpp  hash_algs.cpp  linkedList.cpp
src/dependencies/: PerfEvent.hpp  cxxopts.hpp
