[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AlgoGaugePY"
version = "0.0.1"
description = "A mini version of AlgoGauge built in python"
readme = "README.md"
dependencies = [
    'argparse',
]
requires-python = ">=3.7"

[project.gui-scripts]
AlgoGaugePY = "AlgoGaugePY:main"