[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AlgoGaugePY"
version = "1.0"  # Temporary placeholder, replaced dynamically during build
description = "A mini version of AlgoGauge built in Python"
readme = "README.md"
authors = [
    { name = "Coleton Watt", email = "coletonwatt@icloud.com" }
]
license = { text = "MIT" }
dependencies = [
    "argparse",
]
requires-python = ">=3.7"

[project.scripts]
AlgoGaugePY = "AlgoGaugePY:main"

[tool.setuptools]
packages = ["AlgoGaugePY"]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
# Automatically includes the package version from a single source of truth
version = { attr = "AlgoGaugePY.__version__" }